src/tui/snapshots/parallels__tui__renderer__tests__renderer_full_layout.snap
---
source: src/tui/renderer.rs
expression: buffer_to_string(&terminal)
---
┌Commands──────────────────────────────────────────────────┐
│ cmd1 │ cmd2                                              │
├──────┴───────────────────────────────────────────────────┤
│[stdout] Starting...                                      │
│[stdout] Processing...                                    │
│[stderr] Warning: something                               │
│[stdout] Done.                                            │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
 SEARCH: Done (1/1) | Enter:confirm Esc:cancel
