src/tui/snapshots/parallels__tui__renderer__tests__renderer_output_area_scrolled_right_hides_left_columns.snap
---
source: src/tui/renderer.rs
expression: buffer_to_string(&terminal)
---
┌Commands────────────────────────────────────────┐
│ test                                           │
├────────────────────────────────────────────────┤
│FGHIJKLMNOPQRSTUVWXYZ                           │
│pqrstuvwxyz0123456789                           │
│                                                │
└────────────────────────────────────────────────┘
 NORMAL | Auto-scroll: OFF | C-h/l:tabs h/l/w/b:ho
