src/tui/snapshots/parallels__tui__renderer__tests__renderer_output_area_with_stdout_stderr.snap
---
source: src/tui/renderer.rs
expression: buffer_to_string(&terminal)
---
┌Commands────────────────────────────────────────┐
│ test                                           │
├────────────────────────────────────────────────┤
│[stdout] hello world                            │
│[stderr] error message                          │
│[stdout] another line                           │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
 NORMAL | Auto-scroll: OFF | C-h/l:tabs h/l/w/b:ho
