src/tui/snapshots/parallels__tui__renderer__tests__renderer_status_bar_normal_mode.snap
---
source: src/tui/renderer.rs
expression: buffer_to_string(&terminal)
---
┌Commands────────────────────────────────────────┐
│ test                                           │
├────────────────────────────────────────────────┤
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
 NORMAL | Auto-scroll: ON | C-h/l:tabs h/l/w/b:hor
