src/tui/snapshots/parallels__tui__renderer__tests__renderer_tab_bar_multiple_tabs.snap
---
source: src/tui/renderer.rs
expression: buffer_to_string(&terminal)
---
┌Commands─────┬────────────────────────┐
│ cmd1 │ cmd2 │ cmd3                   │
├──────┴──────┴────────────────────────┤
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
 NORMAL | Auto-scroll: ON | h/l:tabs j/k
