src/tui/snapshots/parallels__tui__renderer__tests__renderer_tab_bar_single_tab.snap
---
source: src/tui/renderer.rs
expression: buffer_to_string(&terminal)
---
┌Commands──────────────────────────────┐
│ echo hello                           │
├──────────────────────────────────────┤
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
 NORMAL | Auto-scroll: ON | C-h/l:tabs h
